# R4C

./: README.md  example.env  hello.py  pyproject.toml  requirements.txt
R4C/: settings.py  urls.py
orders/: forms.py  models.py  urls.py  views.py
robots/: forms.py  models.py  signals.py  urls.py  utils.py  views.py
templates/: base.html
templates/robots/: robot_detail.html  robots_list.html
