[project]
name = "r4c"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1.4",
    "openpyxl>=3.1.5",
]

[dependency-groups]
dev = [
    "django-stubs>=5.1.1",
    "ruff>=0.8.3",
    "types-openpyxl>=3.1.5.20241126",
]
